# ocaml-dimensions

./: .gitignore  dimensions.opam
lib/: dimensions.ml  dimensions.mli  dune
tests/: dune  light.ml  smoke.ml  units.ml
